# OpenRover

./: .gitignore  README.md  code  drive  lsusb.txt  show  stop
camera_calibration/: calibrate.py
install/: cl.txt  disk_space  install  install_cleanup  install_opencv  install_ros  install_sd  install_slam  install_tensorflow  rc.local  setup
source/: Makefile  arm.py  camera.py  controller_board.py  drive.py  functions.py  keys.py  look.py  motors.c  motors.py  remote.py  sensors.py  stream.py  video.py  vision copy.py  vision.py  web.py
source/C/: drive.c
source/cpp/: CMakeLists.txt  Makefile  README.md  Recording-0.yuv  cam.cpp  cam.yml  camera_pi.cpp  camera_usb.cpp  drive  drive.cpp  drive.h  flushthread.h  kalman_filter.cpp  kalman_filter.h  webserver.cpp  webserver.html
source/web/: index.html
